force-app/main/default/objects/Language__c/Language__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Language</label>
</CustomObject>