force-app/main/default/objects/Language__c/fields/Language_Client__c.field-meta.xml
<CustomField>
    <fullName>Language_Client__c</fullName>
    <label>Language Client</label>
    <length>20</length>
    <type>Text</type>
</CustomField>