force-app/main/default/objects/Language__c/fields/Language_User__c.field-meta.xml
<CustomField>
    <fullName>Language_User__c</fullName>
    <label>Language User</label>
    <length>20</length>
    <type>Text</type>
</CustomField>