force-app/main/default/objects/Language__c/fields/Translated_Value__c.field-meta.xml
<CustomField>
    <fullName>Translated_Value__c</fullName>
    <label>Translated Value</label>
    <length>200</length>
    <type>Text</type>
</CustomField>